[package]
name = "x2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
schemars = "0.8.10"
serde = "1.0.174"
serde-wasm-bindgen = "0.5.0"
warp-contracts = "0.1.3"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
